--- a/azure_workitem_llm/deploy.yml
+++ b/azure_workitem_llm/deploy.yml
@@ -1,3 +1,13 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: backend-config
+  namespace: app
+data:
+  CHROMA_URL: http://chromadb:8000
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,6 +40,11 @@ spec:
               secretKeyRef:
                 name: hf-secret
                 key: HF_TOKEN
+          - name: CHROMA_URL
+            valueFrom:
+              configMapKeyRef:
+                name: backend-config
+                key: CHROMA_URL
 ---
 apiVersion: v1
 kind: Service
@@ -44,11 +59,3 @@ spec:
       targetPort: 8000
       protocol: TCP
   type: ClusterIP
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: chromadb-sa
-  namespace: app
-  annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::581351078906:role/ChromaDBS3AccessRole
