--- a/azure_workitem_llm/curl_docker_image/Dockerfile
+++ b/azure_workitem_llm/curl_docker_image/Dockerfile
@@ -1,9 +1,13 @@
-FROM debian:bookworm-slim
+FROM alpine:3.20
 
-ENV DEBIAN_FRONTEND=noninteractive
+RUN apk add --no-cache \
+  curl \
+  bash \
+  jq \
+  unzip \
+  bash \
+  python3 \
+  py3-pip \
+  aws-cli
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends curl jq ca-certificates && \
-    rm -rf /var/lib/apt/lists/*
-
-CMD ["sh"]
+ENTRYPOINT ["/bin/bash", "-c"]
