--- a/azure_workitem_llm/chroma-sync-rolebinding.yaml
+++ b/azure_workitem_llm/chroma-sync-rolebinding.yaml
@@ -11,3 +11,17 @@ roleRef:
   kind: Role
   name: chroma-job-orchestrator
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: chroma-scale-binding
+  namespace: app
+subjects:
+  - kind: ServiceAccount
+    name: chroma-s3-sa
+    namespace: app
+roleRef:
+  kind: Role
+  name: chroma-scale-role
+  apiGroup: rbac.authorization.k8s.io
