US376|install kubectl for scaling pods

--- a/azure_workitem_llm/curl_docker_image/Dockerfile
+++ b/azure_workitem_llm/curl_docker_image/Dockerfile
@@ -10,4 +10,8 @@ RUN apk add --no-cache \
   py3-pip \
   aws-cli
 
-ENTRYPOINT ["/bin/bash", "-c"]
+RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
+    && chmod +x kubectl \
+    && mv kubectl /usr/local/bin/
+
+ENTRYPOINT ["/bin/bash"]
